--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="gray_900">#212121</color>
 
     <color name="transparent">#00000000</color>
-    <color name="red">#FFC107</color>
+    <color name="yellow">#FFC107</color>
 
 
 </resources>
