--- a/app/src/main/res/drawable/select_state.xml
+++ b/app/src/main/res/drawable/select_state.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:color = "@color/red"
+        android:color = "@color/yellow"
         android:state_selected="true"
         />
 
