--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -1,15 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".movies.MoviesFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    tools:context=".ui.movies.MoviesFragment">
 
 
-    <TextView
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:title="Movies"
+        app:titleTextColor="@color/white"
+        android:background="@color/gray_800"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="@dimen/margin10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/toolbar"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+     android:layout_marginHorizontal="@dimen/margin10dp"
+        android:layout_marginTop="79dp"
+
+        android:layout_marginBottom="@dimen/margin10dp"
+        android:background="@color/gray_300" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rw_movies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Movies"
-        android:textSize="28sp"/>
+        android:layout_below="@+id/searchview"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="100dp" />
 
-</FrameLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_movie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="77dp"
+        android:backgroundTint="@drawable/select_state_for_button"
+        android:src="@drawable/ic_baseline_add_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rw_movies" />
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cw_last_seen"
+        android:layout_width= "match_parent"
+        android:layout_height="80dp"
+        app:cardCornerRadius="5dp"
+        app:strokeWidth="1dp"
+        app:strokeColor="@color/yellow"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@id/searchview"
+        android:layout_marginTop="60dp"
+        android:layout_marginHorizontal="@dimen/margin10dp"
+
+        android:layout_marginBottom="65dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/margin20dp"
+                android:layout_marginStart="16dp"
+                android:text="@string/last_viewed"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+</RelativeLayout>
