--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/moviesFragment"
         android:title="@string/bottom_nav_movies"
-        android:icon="@drawable/ic_baseline_movie_24"
+        android:icon="@drawable/clapper"
         />
 
     <item
@@ -15,7 +15,7 @@
     <item
         android:id="@+id/favoritesFragment"
         android:title="@string/bottom_nav_favorites"
-        android:icon="@drawable/ic_baseline_favorite_24"
+        android:icon="@drawable/heart"
         />
 
 </menu>
