--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.AndroidHello" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.AndroidHello" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/gray_800</item>
         <item name="colorPrimaryVariant">@color/gray_900</item>
