--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -52,8 +52,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="77dp"
+        android:layout_marginEnd="49dp"
+        android:layout_marginBottom="74dp"
         android:backgroundTint="@drawable/select_state_for_button"
         android:src="@drawable/ic_baseline_add_24"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,6 +84,8 @@
                 android:layout_marginHorizontal="@dimen/margin20dp"
                 android:layout_marginStart="16dp"
                 android:text="@string/last_viewed"
+                android:textSize="@dimen/text_size_18sp"
+                android:textStyle = "bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
