--- a/app/src/main/res/layout/favorite_movie_item.xml
+++ b/app/src/main/res/layout/favorite_movie_item.xml
@@ -13,30 +13,31 @@
         app:cardCornerRadius="@dimen/margin10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+            android:layout_width="397dp"
             android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/movie_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin10dp"
+                android:layout_marginEnd="100dp"
                 android:text="@string/mad_max_fury_road"
                 android:textSize="@dimen/cw_text_size"
-                android:layout_marginEnd="100dp"
-                android:layout_marginStart="@dimen/margin10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
             <ImageButton
-                android:id="@+id/add_to_fav"
+                android:id="@+id/remove_from_fav"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/favorite_35"
-                android:background="@color/white"
+                android:backgroundTint="@drawable/state_pressed"
+                android:src="@drawable/minus_35"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.268"
                 app:layout_constraintStart_toEndOf="@+id/movie_name"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
