--- a/app/src/main/res/drawable/select_state.xml
+++ b/app/src/main/res/drawable/select_state.xml
@@ -7,7 +7,7 @@
         />
 
     <item
-        android:color = "@color/gray_800"
+        android:color = "@color/white"
         android:state_selected="false"
         />
 
