--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/action"
+    style="@style/TEXT"
     android:padding="@dimen/margin10dp"
     android:textSize="@dimen/size16sp"/>
 
