--- a/app/src/main/res/layout/fragment_add_movie.xml
+++ b/app/src/main/res/layout/fragment_add_movie.xml
@@ -4,13 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    style="@style/SCREEN"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.addmovie.AddMovieFragment">
 
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:title="@string/add_movie"
+        style="@style/TOOLBAR"
+        app:navigationIcon="@drawable/back_arrow_30"
         app:titleTextColor="@color/white"
         android:background="@color/gray_800"
         android:layout_marginBottom="@dimen/margin10dp"/>
@@ -19,11 +23,13 @@
         style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         app:startIconDrawable="@drawable/film_reel_24"
         android:layout_marginVertical="@dimen/margin10dp"
         android:layout_marginHorizontal="@dimen/margin20dp">
 
         <com.google.android.material.textfield.TextInputEditText
+            style="@style/TEXT"
             android:id="@+id/movie_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -42,6 +48,7 @@
 
         <AutoCompleteTextView
             android:id="@+id/autoComplete"
+            style="@style/TEXT"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -61,6 +68,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/date"
+            style="@style/TEXT"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="none"/>
@@ -75,6 +83,7 @@
 
         <RadioButton
             android:id="@+id/firstTime"
+            style="@style/TEXT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="false"
@@ -84,6 +93,7 @@
 
         <RadioButton
             android:id="@+id/rewatch"
+            style="@style/TEXT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="false"
@@ -97,6 +107,7 @@
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:rating="1"
         android:numStars="5"
         android:layout_gravity="center"
         android:stepSize="0.5"/>
@@ -106,6 +117,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/save"
+        style="@style/BUTTON"
+        android:enabled="false"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/margin20dp"/>
 
