--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/SCREEN"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     tools:context=".ui.movies.MoviesFragment">
 
 
@@ -13,8 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:title="Movies"
-        app:titleTextColor="@color/white"
-        android:background="@color/gray_800"
+        style="@style/TOOLBAR"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -25,22 +24,22 @@
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchview"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/toolbar"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-     android:layout_marginHorizontal="@dimen/margin10dp"
+        android:layout_marginHorizontal="@dimen/margin10dp"
         android:layout_marginTop="79dp"
-
         android:layout_marginBottom="@dimen/margin10dp"
-        android:background="@color/gray_300" />
+        style="@style/SEARCHVIEW"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rw_movies"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="80dp"
         android:layout_below="@+id/searchview"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
@@ -52,9 +51,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="49dp"
-        android:layout_marginBottom="74dp"
-        android:backgroundTint="@drawable/select_state_for_button"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="82dp"
+        style="@style/BUTTON"
         android:src="@drawable/ic_baseline_add_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/rw_movies" />
@@ -64,13 +63,14 @@
         android:layout_width= "match_parent"
         android:layout_height="80dp"
         app:cardCornerRadius="5dp"
+        style="@style/BUTTON"
         app:strokeWidth="1dp"
-        app:strokeColor="@color/yellow"
+        app:strokeColor="@color/black_1"
+        android:backgroundTint="@color/gray_600"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@id/searchview"
         android:layout_marginTop="60dp"
         android:layout_marginHorizontal="@dimen/margin10dp"
-
         android:layout_marginBottom="65dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
