--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,16 +2,52 @@
     <!-- Base application theme. -->
     <style name="Theme.AndroidHello" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/gray_800</item>
-        <item name="colorPrimaryVariant">@color/gray_900</item>
+        <item name="colorPrimary">@color/gray_600</item>
+        <item name="colorPrimaryVariant">@color/gray_500</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/gray_600</item>
-        <item name="colorSecondaryVariant">@color/gray_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondaryVariant">@color/gray_300</item>
+        <item name="colorOnSecondary">@color/gray_500</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/gray_800</item>
         <!-- Customize your theme here. -->
 
+
     </style>
+
+    <style name="SCREEN">
+        <item name="android:background">@color/gray_500</item>
+    </style>
+
+    <style name="TEXT">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/gray_600</item>
+    </style>
+
+    <style name="BUTTON">
+        <item name="android:backgroundTint">@color/gray_800</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="SEARCHVIEW">
+        <item name="android:background">@color/gray_600</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="TOOLBAR">
+        <item name="android:titleTextColor">@color/black_1</item>
+        <item name="android:background">@color/gray_800</item>
+        <item name="android:iconPreview">@color/white</item>
+    </style>
+
+    <style name="BOTTOMNAVIGATION">
+        <item name="android:background">@color/gray_700</item>
+        <item name="android:iconPreview">@color/white</item>
+    </style>
+
+    <style name="CARDVIEW">
+        <item name="android:backgroundTint">@color/gray_700</item>
+    </style>
+
 </resources>
