--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,17 @@
     <color name="gray_900">#212121</color>
 
     <color name="transparent">#00000000</color>
-    <color name="yellow">#FFC107</color>
+    <color name="yellow">#FFEB3B</color>
+
+
+    <color name="blue_grey_1">#455A64</color>
+    <color name="blue_grey_2">#607D8B</color>
+    <color name="blue_grey_3">#CFD8DC</color>
+
+    <color name="black_1">#212121</color>
+    <color name="amber">#FFC107</color>
+    <color name="black_2">#212121</color>
+
 
 
 </resources>
